--- a/app/views/messages/index.html.erb
+++ b/app/views/messages/index.html.erb
@@ -1,4 +1,3 @@
-
 <div class="row">
   <div class="small-6 large-2 columns"><br></div>
   <div class="small-6 large-8 columns">
@@ -7,23 +6,8 @@
         <h3 class="header-empty">Nothing is posted to the fridge.<br>
         Did you move in yesterday or do you just not like each other?</h3>
       <% else %>
-      <div class="fridge-today"><span class="today">Today</span></div>
-        <% @messages.today.each do |message| %>
-        <table class="message-table">
-          <tr>
-            <td valign="top" class="message-pic"><%= image_tag message.author.avatar.url(:thumb) %></td>
-            <td valign="middle" class="message-text"><span id="fridge-author"><%= message.author.first_name.capitalize %> <%= message.author.last_name.capitalize[0] %>.</span> <span id="fridge-title">posted <%= time_ago_in_words(message.created_at) %> ago </span><br>
-              <% unless message.picture.nil? %>
-                <%= image_tag message.picture.picture_content.url(:medium) %><br>
-              <% end %>
-                <%= message.content %></td>
-            <td valign="bottom" class="message-delete">
-              <% if message.author == current_user %>
-                <%= link_to "Delete", house_message_path(@house, message), class: "delete-button", id:"/houses/#{@house.id}/messages/#{message.id}", remote: true %></td>
-              <% end %>
-          </tr>
-        </table>
-        <% end %>
+        <div class="fridge-today"><span class="today">Today</span></div>
+        <%= render @messages.today%>
       <% end %>
     </div>
     <div>
